change the order of sections

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -9,6 +9,7 @@
 \usepackage[pdftex]{graphicx} % закомментировать в krctran.sty
 %\usepackage{caption}  %-  вставить в krctran перед описанием подписей caption (\renewcommand\@makecaption)
 %\usepackage{subcaption} % float figures side by side}  -  вставить в krctran перед описанием подписей caption (\renewcommand\@makecaption)
+
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{algorithm2e}
@@ -42,8 +43,8 @@ $^2$Петрозаводский Государственный Университет}
 }
 \engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. The paper consists of three main parts: (1) supervised (machine learning) approaches to word-sense disambiguation, (2) unsupervised approaches based on unlabeled corpora and (3) knowledge-based approaches to word-sense disambiguation, where machine-readable dictionaries, thesauri, ontologies are used. This paper is licensed under the CC Attribution license.}
 
-\ruskeywords{алгоритм, метод, разрешение лексической многозначности.}
-\engkeywords{algorithm, method, word-sense disambiguation.}
+\ruskeywords{разрешение лексической многозначности, нейронная сеть, бустинг, наивный байесовский классификатор, байесовская сеть, сочетаемостные ограничения, различение значений слов.}
+\engkeywords{word-sense disambiguation, neural network, boosting, naive Bayes classifier, Bayesian network, selectional preferences, word sense discrimination.}
 
 \maketitle
 
@@ -63,71 +64,81 @@ $^2$Петрозаводский Государственный Университет}
 
 Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяженная речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
 
-Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и тому подобное) и, на наш взгляд, является предтечей искусственного интеллекта.
+Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (например, информационный поиск, машинный перевод) и, на наш взгляд, является предтечей искусственного интеллекта.
 
-Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
+%Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
+%\begin{itemize}
+%\item WSD-методы с учителем (\textit{supervised}) --- методы, базирующиеся на машинном обучении и работающие на размеченных корпусах текстов; 
+%\item WSD-методы без учителя (\textit{unsupervised}), не использующие никаких размеченных корпусов для различения значений слов.
+%\end{itemize}
 
+Среди основных методов разрешения лексической многозначности выделяют: методы, использующие внешние источники информации и методы, базирующиеся на машинном обучении, работающие на размеченных корпусах текстов. Также применяются комбинации этих методов \cite{Lukash 2011} (с. 191--192). 
+
+По другой классификации методы разрешения лексической многозначности
+различают по типу используемых \textit{внешних источников информации}~\cite{Navigli 2009} (с. 10:6--10:8):
 \begin{itemize}
-\item WSD-методы с учителем (\textit{supervised}) --- методы, базирующиеся на машинном обучении и работающие на размеченных корпусах текстов; 
-\item WSD-методы без учителя (\textit{unsupervised}), не использующие никаких размеченных корпусов для различения значений слов.
+\item структурированные источники данных (машиночитаемые словари, тезаурусы, онтологии). Тезаурусы содержат информацию об отношениях между словами, такими как: синонимия, антонимия и другие. Классическим примером тезауруса и машиночитаемого словаря для английского языка является WordNet.
+\item неструктурированные источники данных в виде корпусов текстов делятся на (а)~неразмеченные корпуса (raw corpora) и (б)~синтаксически и/или семантически размеченные корпуса.
 \end{itemize}
-
-Другая классификация методов строится на противопоставлении используемых ресурсов \cite{Navigli 2009}:
-\begin{itemize}
-\item WSD-методы, основанные на знаниях (\textit{knowledge-based}); в этих методах используются внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии);
-\item WSD-методы, основанные на корпусах текстов (\textit{corpus-based}).
-\end{itemize}
-
-Также применяются комбинации этих методов.
 
 На сегодняшний день на русском языке нет, по-видимому, достаточно объёмных и серьёзных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д.~ Ю. Турдакова \cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая будет заделом для полновесного обзора по данной теме.
 
-Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности, разбитые на три группы: 
+Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности, разбитые на группы: 
 \begin{itemize}
-\itemс использованием машинного обучения: метод ансамбля байесовских классификаторов, нейронные сети, бустинг как метод улучшения точности алгоритма обучения, сравнение методов машинного обучения;
-\itemбез машинного обучения: различение значений на основе контекстных векторов, расширенных словарными значениями; поиск и кластеризация похожих слов; кластеризация фрагментов биомедицинских текстов; кластеризация посредством комитетов;
-\itemметоды, основанные на знаниях: лексические цепочки, сочетаемостные ограничения на основе байесовских сетей.
+\item нейронные сети --- многообещающие методы с богатой историей;
+\item бустинг как метод улучшения точности алгоритма обучения;
+\item лексические цепочки --- построение последовательности семантически связанных слов;
+\item метод ансамбля байесовских классификаторов и сочетаемостные ограничения на основе байесовских сетей;
+\item контекстная кластеризация --- кластеризация контекстных векторов, где разные кластеры соответствуют разным значениям слова;
+\item кластеризация слов --- это кластеризация семантически близких слов, при этом кластер соответствует некоторому значению.
 \end{itemize}
- Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из указанных направлений.
 
-\bfullwidth
-\begin{center}
-\section{WSD-методы с учителем}
-\end{center}
-\efullwidth
-
-\input{./chapter/Chuharev_bayes}
+Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из затронутых направлений.
 
 \input{./chapter/Kirillov_seti}
-
 \input{./chapter/chirkova_busting.tex}
- 
-\input{./chapter/Korzhitsky_compare.tex}
-
-\bfullwidth
-\begin{center}
-\section{WSD-методы без учителя}
-\end{center}
-\efullwidth
-
-\input{./chapter/Spirkova_vektor_specific.tex}
-
-\input{./chapter/Shorets_clustering.tex}
-
-\input{./chapter/Yaryshkina_clustering_medtekst.tex}
-
-
-\bfullwidth
-\begin{center}
-\section{WSD-методы, основанные на знаниях}
-\end{center}
-\efullwidth
-
-\input{./chapter/Yankevich_komitetj.tex}
-
 \input{./chapter/Pilinovich_lexical_chains}
 
+\bfullwidth
+\begin{center}
+\section{Байесовский классификатор и сочетаемостные ограничения}
+\end{center}
+\efullwidth
+
+В первой части главы строится ансамбль наивных байесовских классификаторов. Наивный байесовский классификатор --- это простой вероятностный классификатор на основе применения теоремы Байеса. Для различения значений учитывается совместная встречаемость слов в окне заданного размера в текстах корпуса.
+
+Во второй части главы для каждого глагола строится байесовская сеть. Байесовская модель обучается сочетаемостным ограничениям глаголов, то есть обучается тому --- с какими существительными глаголы могут употребляться. Сочетаемостные ограничения позволяют ограничить число значений целевого слова по данным контекста~\cite{Navigli 2009} (с. 10:32). Связи глагол-существительное извлекаются из корпуса текстов, а классы существительных задаются тезаурусом WordNet. Маловероятные значения слов при построении сочетаемостных ограничений отбрасываются (стратегия “explaining away”).
+
+%\columnbreak
+\input{./chapter/Chuharev_bayes}
 \input{./chapter/Sikhonina_bayes_seti}
+
+\bfullwidth
+\begin{center}
+\section{Контекстная кластеризация}
+\end{center}
+\efullwidth
+Каждому вхождению анализируемого слова в корпус соответствует контекстный вектор. Выполняется кластеризация векторов, где разные кластеры соответствуют разным значениям слова~\cite{Navigli 2009} (с. 10:26--10:28).
+
+\input{./chapter/Yaryshkina_clustering_medtekst.tex}
+\input{./chapter/Spirkova_vektor_specific.tex}
+
+\bfullwidth
+\begin{center}
+\section{Кластеризация слов}
+\end{center}
+\efullwidth
+Кластеризация слов --- это кластеризация семантически близких слов, при этом кластер соответствует некоторому значению~\cite{Navigli 2009} (с. 10:28--10:29).
+
+\input{./chapter/Shorets_clustering.tex}
+\input{./chapter/Yankevich_komitetj.tex}
+
+\bfullwidth
+\begin{center}
+\section{Эксперименты}
+\end{center}
+\efullwidth
+\input{./chapter/Korzhitsky_compare.tex}
 
 \section{Заключение}
 
