abstract and lead text of sections updated

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -7,8 +7,6 @@
 \usepackage{krctran}
 %\usepackage[utf8]{inputenc} % закомментировать в krctran.sty: \RequirePackage[cp1251]{inputenc}
 \usepackage[pdftex]{graphicx} % закомментировать в krctran.sty
-%\usepackage{caption}  %-  вставить в krctran перед описанием подписей caption (\renewcommand\@makecaption)
-%\usepackage{subcaption} % float figures side by side}  -  вставить в krctran перед описанием подписей caption (\renewcommand\@makecaption)
 
 \usepackage{textcomp}
 \usepackage{xcolor}
@@ -20,7 +18,7 @@
 
 \begin{document}
 
-\procname{Труды Карельского научного центра РАН\\ \No 0. 2015. С.~1--24}
+\procname{Труды Карельского научного центра РАН\\ \No 0. 2015. С.~1--28}
 \udk{УДК 81.32}
 
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
@@ -35,16 +33,26 @@ $^2$Петрозаводский Государственный Университет}
 \rusabstract{Разрешение лексической многозначности --- это задача выбора между разными значениями 
 слов и словосочетаний в словаре в зависимости от контекста. 
 В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. 
-
-Представлены (1) методы, основанные на машинном обучении, 
-(2) методы, не использующие никаких размеченных корпусов для различения значений слов, и 
-(3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии). 
+Эти методы используют различный математический и алгоритмический аппарат для решения WSD-задачи: нейронные сети, 
+адаптивные алгоритмы улучшения точности обучения (AdaBoost), 
+построение лексических цепочек, 
+методы на основе применения теоремы Байеса 
+и методы кластеризации контекстных векторов и семантически близких слов. 
+Работу завершает исследование, в котором сравниваются время обучения, время работы и результаты работы разных алгоритмов решения WSD-задачи.
 Статья распространяется на правах свободной лицензии “CC Attribution”.
 }
-\engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. The paper consists of three main parts: (1) supervised (machine learning) approaches to word-sense disambiguation, (2) unsupervised approaches based on unlabeled corpora and (3) knowledge-based approaches to word-sense disambiguation, where machine-readable dictionaries, thesauri, ontologies are used. This paper is licensed under the CC Attribution license.}
+\engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. 
+These approaches include the following groups of methods: 
+neural network, 
+machine learning meta-algorithms (AdaBoost), 
+lexical chain computation, 
+methods based on Bayes' theorem, 
+context clustering and words clustering algorithms. 
+The experimental comparison of different algorithms concludes this review.
+This paper is licensed under the CC Attribution license.}
 
-\ruskeywords{разрешение лексической многозначности, нейронная сеть, бустинг, наивный байесовский классификатор, байесовская сеть, сочетаемостные ограничения, различение значений слов.}
-\engkeywords{word-sense disambiguation, neural network, boosting, naive Bayes classifier, Bayesian network, selectional preferences, word sense discrimination.}
+\ruskeywords{разрешение лексической многозначности, нейронная сеть, бустинг, лексическая цепочка, наивный байесовский классификатор, байесовская сеть, сочетаемостные ограничения, различение значений слов.}
+\engkeywords{word-sense disambiguation, neural network, boosting, lexical chain, naive Bayes classifier, Bayesian network, selectional preferences, word sense discrimination.}
 
 \maketitle
 
@@ -66,22 +74,17 @@ $^2$Петрозаводский Государственный Университет}
 
 Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (например, информационный поиск, машинный перевод) и, на наш взгляд, является предтечей искусственного интеллекта.
 
-%Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
-%\begin{itemize}
-%\item WSD-методы с учителем (\textit{supervised}) --- методы, базирующиеся на машинном обучении и работающие на размеченных корпусах текстов; 
-%\item WSD-методы без учителя (\textit{unsupervised}), не использующие никаких размеченных корпусов для различения значений слов.
-%\end{itemize}
-
 Среди основных методов разрешения лексической многозначности выделяют: методы, использующие внешние источники информации и методы, базирующиеся на машинном обучении, работающие на размеченных корпусах текстов. Также применяются комбинации этих методов \cite{Lukash 2011} (с. 191--192). 
 
 По другой классификации методы разрешения лексической многозначности
 различают по типу используемых \textit{внешних источников информации}~\cite{Navigli 2009} (с. 10:6--10:8):
 \begin{itemize}
-\item структурированные источники данных (машиночитаемые словари, тезаурусы, онтологии). Тезаурусы содержат информацию об отношениях между словами, такими как: синонимия, антонимия и другие. Классическим примером тезауруса и машиночитаемого словаря для английского языка является WordNet.
+\item структурированные источники данных (машиночитаемые словари, тезаурусы, онтологии). Тезаурусы содержат информацию об отношениях между словами, такими как: синонимия, антонимия и другие. Классическим примером тезауруса и машиночитаемого словаря для английского языка является WordNet, 
+в котором слова организованы в виде \textit{синсетов} (от англ. \textit{\textbf{syn}onym \textbf{set}}, группа синонимов), отношения указаны между синсетами.
 \item неструктурированные источники данных в виде корпусов текстов делятся на (а)~неразмеченные корпуса (raw corpora) и (б)~синтаксически и/или семантически размеченные корпуса.
 \end{itemize}
 
-На сегодняшний день на русском языке нет, по-видимому, достаточно объёмных и серьёзных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д.~ Ю. Турдакова \cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая будет заделом для полновесного обзора по данной теме.
+На сегодняшний день на русском языке нет, по-видимому, достаточно объёмных и серьёзных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д.~ Ю.~Турдакова~\cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая будет заделом для полновесного обзора по данной теме.
 
 Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности, разбитые на группы: 
 \begin{itemize}
@@ -113,12 +116,18 @@ $^2$Петрозаводский Государственный Университет}
 \input{./chapter/Chuharev_bayes}
 \input{./chapter/Sikhonina_bayes_seti}
 
+\pagebreak
 \bfullwidth
 \begin{center}
 \section{Контекстная кластеризация}
 \end{center}
 \efullwidth
-Каждому вхождению анализируемого слова в корпус соответствует контекстный вектор. Выполняется кластеризация векторов, где разные кластеры соответствуют разным значениям слова~\cite{Navigli 2009} (с. 10:26--10:28).
+Каждому вхождению анализируемого слова в корпус соответствует контекстный вектор. Выполняется кластеризация векторов, где разные кластеры соответствуют разным значениям слова~\cite{Navigli 2009} (с. 10:26--10:28). Алгоритмы кластеризации полагаются на дистрибутивную гипотезу (Distributional Hypothesis)~\cite{Harris 1985}, в~соответствии с которой слова, употребляемые в схожих контекстах, считаются близкими по смыслу. 
+
+В первой части выполняется разрешение лексической многозначности и поиск новых значений 
+на основе контекстных векторов, построенных по биомедицинским текстам. 
+
+Во второй части представлена задача \textit{различения значений слов}. Эта задача отличается от задачи разрешения лексической многозначности тем, что при различении значений слов нет никаких предопределенных значений слова, присоединенных к кластерам; здесь слова, употребляющиеся в схожих контекстах, группируются в кластеры (значения).
 
 \input{./chapter/Yaryshkina_clustering_medtekst.tex}
 \input{./chapter/Spirkova_vektor_specific.tex}
@@ -128,7 +137,16 @@ $^2$Петрозаводский Государственный Университет}
 \section{Кластеризация слов}
 \end{center}
 \efullwidth
-Кластеризация слов --- это кластеризация семантически близких слов, при этом кластер соответствует некоторому значению~\cite{Navigli 2009} (с. 10:28--10:29).
+Кластеризация слов --- это кластеризация семантически близких слов, при этом кластер соответствует одному из значений исследуемого слова~\cite{Navigli 2009} (с. 10:28--10:29).
+
+В первой части описан метод построения пары взаимных ближайших соседей 
+и автоматического создания тезауруса.
+Для этого из текста извлекаются тройки зависимостей (слово 1, слово 2, отношение), 
+затем эти тройки используются для вычисления близости значений слов.
+
+Алгоритм кластеризации посредством комитетов, представленный во второй части раздела,
+также можно отнести к задаче \textit{различения значения слов}. 
+В алгоритме последовательно вычисляется сходство между словами,  строится набор компактных кластеров (комитетов), все слова распределяются по этим кластерам
 
 \input{./chapter/Shorets_clustering.tex}
 \input{./chapter/Yankevich_komitetj.tex}
@@ -144,7 +162,7 @@ $^2$Петрозаводский Государственный Университет}
 
 Разрешение лексической многозначности - это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. Задача разрешения лексической многозначности является открытой проблемой, то есть крайне интересной и привлекательной с научной точки зрения.
 
-В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Во-первых, методы, основанные на машинном обучении.  Во-вторых, методы, не использующие никаких размеченных корпусов для различения значений слов. В-третьих, методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии).
+В статье представлен краткий обзор методов и алгоритмов, применяемых для разрешения лексической многозначности. Эти методы используют различный математический и алгоритмический аппарат для решения WSD-задачи: нейронные сети, адаптивный алгоритм улучшения точности обучения AdaBoost, построение лексических цепочек, методы на основе применения теоремы Байеса и методы кластеризации контекстных векторов и семантически близких слов. Работу завершает исследование, в котором сравниваются время обучения, время работы и результаты работы разных алгоритмов решения WSD-задачи.
 
 Работа Старковой В.Г. поддержана грантом РГНФ (проект № 15-04-12029), работа Кириллова А.Н. и Чирковой Ю.В. поддержана грантом РГНФ (проект № 15-04-12006). Работа Крижановского А. А. выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015-2017 (проект «Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса»).
  
