--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -30,7 +30,7 @@
 \organization{$^1$Институт прикладных математических исследований Карельского научного центра РАН \\
 $^2$Петрозаводский Государственный Университет}
 
-\rusabstract{Разрешение лексической многозначности --- это задача выбора между разными значениями 
+\rusabstract{Разрешение лексической многозначности~(WSD) --- это задача выбора между разными значениями 
 слов и словосочетаний в словаре в зависимости от контекста. 
 В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. 
 Эти методы используют различный математический и алгоритмический аппарат для решения WSD-задачи: нейронные сети, 
@@ -38,10 +38,10 @@ $^2$Петрозаводский Государственный Университет}
 построение лексических цепочек, 
 методы на основе применения теоремы Байеса 
 и методы кластеризации контекстных векторов и семантически близких слов. 
-Работу завершает исследование, в котором сравниваются время обучения, время работы и результаты работы разных алгоритмов решения WSD-задачи.
+Завершает работу сравнение разных алгоритмов решения WSD-задачи. 
 Статья распространяется на правах свободной лицензии “CC Attribution”.
 }
-\engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. 
+\engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word-sense disambiguation methods and algorithms. 
 These approaches include the following groups of methods: 
 neural network, 
 machine learning meta-algorithms (AdaBoost), 
@@ -52,7 +52,7 @@ The experimental comparison of different algorithms concludes this review.
 This paper is licensed under the CC Attribution license.}
 
 \ruskeywords{разрешение лексической многозначности, нейронная сеть, бустинг, лексическая цепочка, наивный байесовский классификатор, байесовская сеть, сочетаемостные ограничения, различение значений слов.}
-\engkeywords{word-sense disambiguation, neural network, boosting, lexical chain, naive Bayes classifier, Bayesian network, selectional preferences, word sense discrimination.}
+\engkeywords{word-sense disambiguation, neural network, boosting, lexical chain, naive Bayes classifier, Bayesian network, selectional preferences, word-sense discrimination.}
 
 \maketitle
 
