--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -389,8 +389,6 @@ Machine Learning, vol. 37(3), 1999, pp. 297–336.
 \bibitem{Zhao 2002}
 \textit{Zhao Y. and  Karypis G. }Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515-524. doi: 10.1145/584792.584877
 
-
-
 \end{thebibliography}
 \end{articletext}
 
@@ -627,7 +625,7 @@ tel.: (8142) 711078\\
 e-mail: da\_sha1078@mail.ru
 \end{aboutauthors}
 
-\begin{aboutauthors}
+\begin{aboutauthors_without_page_numbering}
 \authorsname{Ярышкина Екатерина Александровна}
 Студентка\\ 
 Математический факультет\\ 
@@ -643,9 +641,9 @@ Petrozavodsk State University\\
 33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: kate.rysh@gmail.com 
-\end{aboutauthors}
+\end{aboutauthors_without_page_numbering}
 
-\begin{aboutauthors}
+\begin{aboutauthors_without_page_numbering}
 \authorsname{Янкевич Дарья Юрьевна}
 Студентка\\ 
 Математический факультет\\ 
@@ -661,7 +659,7 @@ Petrozavodsk State University\\
 33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: dyankevic@gmail.com
-\end{aboutauthors}
+\end{aboutauthors_without_page_numbering}
 
 
 \end{document}
