editors comments till Korzhitksy

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -39,7 +39,7 @@ $^2$Петрозаводский Государственный Университет}
 методы на основе применения теоремы Байеса 
 и методы кластеризации контекстных векторов и семантически близких слов. 
 Завершает работу сравнение разных алгоритмов решения WSD-задачи. 
-Статья распространяется на правах свободной лицензии “CC Attribution”.
+Статья распространяется на правах свободной лицензии <<CC Attribution>>.
 }
 \engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word-sense disambiguation methods and algorithms. 
 These approaches include the following groups of methods: 
@@ -63,28 +63,28 @@ This paper is licensed under the CC Attribution license.}
 Приведем несколько примеров употребления слов <<коса>> и <<косой>>, найденных с помощью Национального корпуса русского языка (http://ruscorpora.ru) по запросу <<коса>>:
 
 \begin{enumerate}
-\item Поп сам в первой \textit{\underline{косе}} идет, но прихожане не торопятся, смотрят на солнышко и часа через полтора уже намекают, что обедать пора. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
-\item Но работа даже и после этого идет все вялее и вялее; некоторые и \textit{\underline{косы}} побросали. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
-\item В особенности жестоко было крепостное право относительно дворовых людей: даже волосы крепостных девок эксплуатировали, продавая их \textit{\underline{косы}} парикмахерам. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
-\item Это одинокая скала, соединяющаяся с материком намывной \textit{\underline{косой}} из песка и гальки. {\footnotesize[\textit{В. К. Арсеньев, «По Уссурийскому краю», 1917 г.}]}
-\item Первая черепашка подскочила к гвардейцу и воткнула ему в спину сверкающий \textit{\underline{косой}} меч. {\footnotesize[\textit{Виктор Пелевин. S.N.U.F.F, 2011}]}
+\item Поп сам в первой \textit{\underline{косе}} идет, но прихожане не торопятся, смотрят на солнышко и часа через полтора уже намекают, что обедать пора. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886--1887 гг.)}]}
+\item Но работа даже и после этого идет все вялее и вялее; некоторые и \textit{\underline{косы}} побросали. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886--1887 гг.)}]}
+\item В особенности жестоко было крепостное право относительно дворовых людей: даже волосы крепостных девок эксплуатировали, продавая их \textit{\underline{косы}} парикмахерам. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886--1887 гг.)}]}
+\item Это одинокая скала, соединяющаяся с~материком намывной \textit{\underline{косой}} из песка и гальки. {\footnotesize[\textit{В. К. Арсеньев. По Уссурийскому краю, 1917 г.}]}
+\item Первая черепашка подскочила к гвардейцу и воткнула ему в спину сверкающий \textit{\underline{косой}} меч. {\footnotesize[\textit{Виктор Пелевин. S.N.U.F.F, 2011~г.}]}
 \end{enumerate}
 
 Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяженная речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
 
-Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (например, информационный поиск, машинный перевод) и, на наш взгляд, является предтечей искусственного интеллекта.
+Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (например, информационный поиск, машинный перевод), и, на наш взгляд, является предтечей искусственного интеллекта.
 
-Среди основных методов разрешения лексической многозначности выделяют: методы, использующие внешние источники информации и методы, базирующиеся на машинном обучении, работающие на размеченных корпусах текстов. Также применяются комбинации этих методов \cite{Lukash 2011} (с. 191--192). 
+Среди основных методов разрешения лексической многозначности выделяют: методы, использующие внешние источники информации, и методы, базирующиеся на машинном обучении, работающие на размеченных корпусах текстов. Также применяются комбинации этих методов \cite{Lukash 2011} (с. 191--192). 
 
-По другой классификации методы разрешения лексической многозначности
+По другой классификации, методы разрешения лексической многозначности
 различают по типу используемых \textit{внешних источников информации}~\cite{Navigli 2009} (с. 10:6--10:8):
 \begin{itemize}
-\item структурированные источники данных (машиночитаемые словари, тезаурусы, онтологии). Тезаурусы содержат информацию об отношениях между словами, такими как: синонимия, антонимия и другие. Классическим примером тезауруса и машиночитаемого словаря для английского языка является WordNet, 
-в котором слова организованы в виде \textit{синсетов} (от англ. \textit{\textbf{syn}onym \textbf{set}}, группа синонимов), отношения указаны между синсетами.
+\item структурированные источники данных (машиночитаемые словари, тезаурусы, онтологии). Тезаурусы содержат информацию об отношениях между словами, такими, как: синонимия, антонимия и другие. Классическим примером тезауруса и машиночитаемого словаря для английского языка является WordNet, 
+в котором слова организованы в виде \textit{синсетов} (от англ. \textit{\textbf{syn}onym \textbf{set}}, группа синонимов), отношения указаны между синсетами;
 \item неструктурированные источники данных в виде корпусов текстов делятся на (а)~неразмеченные корпуса (raw corpora) и (б)~синтаксически и/или семантически размеченные корпуса.
 \end{itemize}
 
-На сегодняшний день на русском языке нет, по-видимому, достаточно объёмных и серьёзных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д.~ Ю.~Турдакова~\cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая будет заделом для полновесного обзора по данной теме.
+На сегодняшний день на русском языке нет, по-видимому, достаточно объемных и серьезных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д.~ Ю.~Турдакова~\cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая будет заделом для полновесного обзора по данной теме.
 
 Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности, разбитые на группы: 
 \begin{itemize}
@@ -96,7 +96,7 @@ This paper is licensed under the CC Attribution license.}
 \item кластеризация слов --- это кластеризация семантически близких слов, при этом кластер соответствует некоторому значению.
 \end{itemize}
 
-Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из затронутых направлений.
+Данная статья является <<введением>> в проблематику WSD, поскольку эта тема чрезвычайно обширна и существуют сотни интересных работ по каждому из затронутых направлений.
 
 \input{./chapter/Kirillov_seti}
 \input{./chapter/chirkova_busting.tex}
@@ -110,7 +110,7 @@ This paper is licensed under the CC Attribution license.}
 
 В первой части главы строится ансамбль наивных байесовских классификаторов. Наивный байесовский классификатор --- это простой вероятностный классификатор на основе применения теоремы Байеса. Для различения значений учитывается совместная встречаемость слов в окне заданного размера в текстах корпуса.
 
-Во второй части главы для каждого глагола строится байесовская сеть. Байесовская модель обучается сочетаемостным ограничениям глаголов, то есть обучается тому --- с какими существительными глаголы могут употребляться. Сочетаемостные ограничения позволяют ограничить число значений целевого слова по данным контекста~\cite{Navigli 2009} (с. 10:32). Связи глагол-существительное извлекаются из корпуса текстов, а классы существительных задаются тезаурусом WordNet. Маловероятные значения слов при построении сочетаемостных ограничений отбрасываются (стратегия “explaining away”).
+Во второй части главы для каждого глагола строится байесовская сеть. Байесовская модель обучается сочетаемостным ограничениям глаголов, то есть обучается тому --- с какими существительными глаголы могут употребляться. Сочетаемостные ограничения позволяют ограничить число значений целевого слова по данным контекста~\cite{Navigli 2009} (с. 10:32). Связи глагол-существительное извлекаются из корпуса текстов, а классы существительных задаются тезаурусом WordNet. Маловероятные значения слов при построении сочетаемостных ограничений отбрасываются (стратегия <<explaining away>>).
 
 %\columnbreak
 \input{./chapter/Chuharev_bayes}
@@ -153,7 +153,6 @@ This paper is licensed under the CC Attribution license.}
 \columnbreak
 \input{./chapter/Yankevich_komitetj.tex}
 
-\newpage
 \bfullwidth
 \begin{center}
 \section{Эксперименты}
@@ -555,23 +554,23 @@ tel.: (8142) 711078\\
 e-mail: hogdp@mail.ru
 \end{aboutauthors}
 
-\begin{aboutauthors}
-\authorsname{Ткач Станислав Сергеевич}
-Студент\\
-Математический факультет\\ 
-Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
-тел.: (8142) 711078\\
-эл. почта: tkachkras@gmail.com
-
-\columnbreak
-
-\authorsname{Tkach, Stanislav}
-Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
-tel.: (8142) 711078\\
-e-mail: tkachkras@gmail.com 
-\end{aboutauthors}
+%\begin{aboutauthors}
+%\authorsname{Ткач Станислав Сергеевич}
+%Студент\\
+%Математический факультет\\ 
+%Петрозаводский государственный университет\\
+%пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+%тел.: (8142) 711078\\
+%эл. почта: tkachkras@gmail.com
+%
+%\columnbreak
+%
+%\authorsname{Tkach, Stanislav}
+%Petrozavodsk State University\\
+%33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+%tel.: (8142) 711078\\
+%e-mail: tkachkras@gmail.com 
+%\end{aboutauthors}
 
 \begin{aboutauthors}
 \authorsname{Чиркова Юлия Васильевна}
